# module/referral/controller/referral.controlle.setters.go
@@ -71,28 +71,3 @@ func (c *ReferralController) DeletePaymentOrder(ctx *fiber.Ctx) error {
 		"message": "Payment order deleted successfully",
 	})
 }
-
-// @Summary Pay payment order
-// @Description Pay a payment order by ID
-// @Tags Referrals
-// @Accept json
-// @Produce json
-// @Param order_id path string true "Order ID"
-// @Success 200 {object} referral_dto.CellResponse "Success response"
-// @Failure 400 {object} errors.MapError "Validation error"
-// @Failure 500 {object} errors.MapError "Internal server error"
-// @Router /api/referrals/pay/{order_id} [post]
-func (c *ReferralController) PayDebtAuthor(ctx *fiber.Ctx) error {
-	paramOrderID := ctx.Query("order_id")
-	c.logger.Infof("order ID: %s", paramOrderID)
-
-	cell, err := c.referral_service.PayPaymentOrder(ctx.Context(), paramOrderID)
-	if err != nil {
-		c.logger.Errorf("error paying payment order: %v", err)
-		return errors.NewError(500, err.Error())
-	}
-
-	return ctx.Status(200).JSON(referral_dto.CellResponse{
-		Cell: cell,
-	})
-}
